--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 
     <button onclick="loadLists()">Load List</button>
 
-    <div id="app">Hey! I'm Carrie</div>
+    <div id="app"></div>
     
     <!-- ========FIREBASE SCRIPTS======== -->
     <!-- update the version number as needed -->
