project setup fonts and images
project setup fonts and images

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,10 @@
   </head>
   <body>
 
+    <nav>
+      <div class="logo"></div>
+    </nav>
+
     <button onclick="loadLists()">Load List</button>
 
     <div id="app"></div>
