home page styles
home page styles

--- a/public/pages/home/home.html
+++ b/public/pages/home/home.html
@@ -1,4 +1,18 @@
 <div class="home-content">
-    <div class="home-hero"></div>
+    <div class="home-hero">
+        <div class="home-text">
+            <div class="big-circle">
+                <div class="big-text">
+                <h1>The Jungle Cook</h1>
+                <p>The home to various recipes of your choice. Add your own recipe today and fill the world with joy!</p>
+            </div>
+            </div>
+            <div class="small-circle">
+                <p class="small">
+                    Want to be a Jungle Cook? Go ahead and the kitchen is yours!
+                </p>
+            </div>
+        </div>
+    </div>
     </div>
     
