--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
       <div class="logo"></div>
       <div class="nav-holder">
         <div class="links">
-          <a href="#home">Home</a>
+          <a href="#home" class="active">Home</a>
           <a href="#browse">Browse</a>
           <a href="#create">Create Recipe</a>
        
