--- a/public/pages/browse/browse.html
+++ b/public/pages/browse/browse.html
@@ -1,7 +1,7 @@
 <div class="browse-content">
     <div class="browse-hero">
         <h1>Recipes: Try some today!</h1>
-        <div class="recipes-container">
+        <!-- <div class="recipes-container">
             <div class="recipe-box">
                 <div class="recipe-image"></div>
                <div class="recipe-description">
@@ -21,6 +21,8 @@
                 </div>
                </div>
             </div>
-        </div>
+
+            <!-- ===RECIPE BOX TWO=== -->
+        </div> -->
     </div>
 </div>
