--- a/public/pages/browse/browse.html
+++ b/public/pages/browse/browse.html
@@ -1,28 +1,7 @@
 <div class="browse-content">
     <div class="browse-hero">
+        <div class="recipe-container">
         <h1>Recipes: Try some today!</h1>
-        <!-- <div class="recipes-container">
-            <div class="recipe-box">
-                <div class="recipe-image"></div>
-               <div class="recipe-description">
-                   <div class="recipe-title">
-                    Supreme Pizza
-                   </div>
-                   <div class="recipe-text">
-                    Make pizza night super duper out of this world with homemade pizza. This recipe is supreme with vegetables and two types of meat. Yum!
-                   </div>
-                   <div class="timer-servings">
-                       <div class="icon timer"></div>
-                       <div class="time">1h 24min</div>
-                   </div>
-                   <div class="timer-servings">
-                    <div class="icon serve"></div>
-                    <div class="servings">4 servings</div>
-                </div>
-               </div>
-            </div>
-
-            <!-- ===RECIPE BOX TWO=== -->
-        </div> -->
     </div>
-</div>
+        </div> 
+    </div>
