--- a/public/pages/browse/browse.html
+++ b/public/pages/browse/browse.html
@@ -2,6 +2,21 @@
     <div class="browse-hero">
         <div class="recipe-container">
         <h1>Recipes: Try some today!</h1>
+        <div class="recipe-box">
+            <div class="recipe-image"></div>
+            <div class="recipe-description">
+                <div class="recipe-title"></div>
+                <div class="recipe-text"></div>
+                <div class="recipe-stats">
+                    <div class="icon timer"></div>
+                    <div class="timer"></div>
+                </div>
+                <div class="recipe-stats">
+                    <div class="icon meal"></div>
+                    <div class="servings"></div>
+                </div>
+            </div>
+        </div>
     </div>
         </div> 
     </div>
