--- a/public/pages/login/login.html
+++ b/public/pages/login/login.html
@@ -1,1 +1,19 @@
-<div class="login-content"></div>
+<div class="login-content">
+    <div class="login-create-container">
+    <div class="login-box">
+        <h1>Login Here!</h1>
+        <input type="text">
+        <input type="text">
+        <button>Login</button>
+    </div>
+    <div class="create-box">
+        <div class="create-account">don’t have an account?</div>
+        <h1>Sign Up!</h1>
+        <input type="text">
+        <input type="text">
+        <input type="text">
+        <input type="text">
+        <button>Sign Up</button>
+    </div>
+</div>
+</div>
