--- a/public/pages/create/create.html
+++ b/public/pages/create/create.html
@@ -1,1 +1,21 @@
-<h1>CREATE</h1>
+<div class="create-content">
+    <div class="field-container">
+        <h1>Hey Michael, create your recipe!</h1>
+        <input type="text">
+        <input type="text">
+        <input type="text">
+        <input type="text">
+        <input type="text">
+
+<h3>Enter Ingredients:</h3>
+<input type="text">
+<input type="text">
+<input type="text">
+
+<h3>Enter Instructions:</h3>
+<input type="text">
+<input type="text">
+<input type="text">
+
+    </div>
+</div>
