--- a/public/pages/create/create.html
+++ b/public/pages/create/create.html
@@ -1,21 +1,34 @@
 <div class="create-content">
     <div class="field-container">
         <h1>Hey Michael, create your recipe!</h1>
-        <input type="text">
-        <input type="text">
-        <input type="text">
-        <input type="text">
-        <input type="text">
+
+        <div class="input-holder">
+        <input type="text" placeholder="Add Recipe Image" />
+        <button class="attach">Attach file</button>
+    </div>
+        <input type="text" placeholder="Recipe Name">
+        <input type="text" placeholder="Recipe Description">
+        <input type="text" placeholder="Recipe Total Time">
+        <input type="text" placeholder="Recipe Serving Size">
 
 <h3>Enter Ingredients:</h3>
-<input type="text">
-<input type="text">
-<input type="text">
+<input type="text" placeholder="Ingredient #1">
+<input type="text" placeholder="Ingredient #2">
+
+<input type="text" placeholder="Ingredient #3">
+<button class="add"><span>+</span></button>
+
 
 <h3>Enter Instructions:</h3>
-<input type="text">
-<input type="text">
-<input type="text">
+<input type="text" placeholder="Instruction #1">
+<input type="text" placeholder="Instruction #2">
+<input type="text" placeholder="Instruction #3">
+<button class="add"><span>+</span></button>
 
+<!-- ===CREATE RECIPE BUTTON=== -->
+
+<button class="create-button">
+    Create Recipe
+</button>
     </div>
 </div>
