--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
           <a href="#home" class="active">Home</a>
           <a href="#browse">Browse</a>
           <a href="#create">Create Recipe</a>
+          <a href="#your" class="your">Your Recipes</a>
        
           <!-- =====LOGIN BUTTON=== -->
           <a href="#login">
