--- a/public/pages/your/your.html
+++ b/public/pages/your/your.html
@@ -3,7 +3,11 @@
        <div class="your-container">
            <h1>Hey Michael, here are your recipes!</h1>
            <div class="your-box">
-               <div class="your-image pizza"></div>
+               <div class="your-image pizza">
+                   <a href="#fullrecipe">
+                   <button class="view">View</button>
+                </a>
+               </div>
                <div class="your-description">
                    <div class="your-title">Supreme Pizza</div>
                    <div class="your-text">Make pizza night super duper out of this world with homemade pizza. This recipe is supreme with vegetables and two types of meat. Yum!</div>
@@ -16,6 +20,10 @@
                     <div class="servings">4 servings</div>
                  </div>
                </div>
+               <div class="edit-delete-container">
+               <button class="edit">Edit Recipe</button>
+               <button class="delete">Delete</button>
+            </div>
            </div>
        </div>
     </div>
