full recipe page
full recipe page

--- a/public/pages/fullrecipe/fullrecipe.html
+++ b/public/pages/fullrecipe/fullrecipe.html
@@ -13,7 +13,12 @@
     <div class="servings">4 servings</div>
 </div>
         </div>
-        <div class="ingredients"></div>
+        <div class="ingredient-container">
+            <div class="ingred-title">Ingredients:</div>
+            <div class="ingredients">
+                1/4 batch pizza dough 2 tablespoons Last-Minute Pizza Sauce 10 slices pepperoni 1 cup cooked and crumbled Italian sausage 2 large mushrooms, sliced 1/4 bell pepper, sliced 1 tablespoon sliced black olives 1 cup shredded mozzarella cheese
+            </div>
+        </div>
         <div class="instructions"></div>
         <button class="edit">Edit Recipe</button>
     </div>
