--- a/public/pages/fullrecipe/fullrecipe.html
+++ b/public/pages/fullrecipe/fullrecipe.html
@@ -15,11 +15,26 @@
         </div>
         <div class="ingredient-container">
             <div class="ingred-title">Ingredients:</div>
-            <div class="ingredients">
-                1/4 batch pizza dough 2 tablespoons Last-Minute Pizza Sauce 10 slices pepperoni 1 cup cooked and crumbled Italian sausage 2 large mushrooms, sliced 1/4 bell pepper, sliced 1 tablespoon sliced black olives 1 cup shredded mozzarella cheese
-            </div>
+            <div class="ingredient">
+                1/4 batch pizza dough </div>
+            <div class="ingredient"> 2 tablespoons Last-Minute Pizza Sauce</div>
+            <div class="ingredient">10 slices pepperoni</div>
+            <div class="ingredient">1 cup cooked and crumbled Italian sausage</div>
+            <div class="ingredient">2 large mushrooms,</div>
+            <div class="ingredient">sliced 1/4 bell pepper, sliced</div>
+            <div class="ingredient"> 1 tablespoon sliced black olives </div>
+            <div class="ingredient">1 cup shredded mozzarella cheese</div>
         </div>
-        <div class="instructions"></div>
+        <div class="instructions-container">
+            <div class="instruct-title">Instructions:</div>
+            <div class="instruction">1. Preheat the oven to 475°. Spray pizza pan with nonstick cooking or line a baking sheet with parchment paper. </div>
+            <div class="instruction">2. Flatten dough into a thin round and place on the pizza pan.</div>
+            <div class="instruction">
+                3. Spread pizza sauce over the dough.
+            </div>
+            <div class="instruction">4. Layer the toppings over the dough in the order listed .</div>
+            <div class="instruction">5. Bake for 8 to 10 minutes or until the crust is crisp and the cheese melted and lightly browned.</div>
+        </div>
         <button class="edit">Edit Recipe</button>
     </div>
 </div>
