--- a/public/pages/your/your.html
+++ b/public/pages/your/your.html
@@ -21,7 +21,9 @@
                  </div>
                </div>
                <div class="edit-delete-container">
+                   <a href="#editrecipe">
                <button class="edit">Edit Recipe</button>
+            </a>
                <button class="delete">Delete</button>
             </div>
            </div>
