--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,11 @@
     <nav>
       <div class="logo"></div>
       <div class="nav-holder">
+        <div class="bars">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+        </div>
         <div class="links">
           <a href="#home" class="active">Home</a>
           <a href="#browse">Browse</a>
@@ -24,7 +29,7 @@
         </div>
       
           <!-- ===HAMBURGER MENU=== -->
-          <div class="hamburger"></div>
+          <!-- <div class="hamburger"></div> -->
         
       </div>
     </nav>
