--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,7 @@
     <div id="app"></div>
 
     <footer>
+      <div class="footer-container">
       <div class="copyright">Copyright © 2019 The Jungle Cook</div>
       <div class="misc">
           <div class="misc-box">Login</div>
@@ -47,6 +48,7 @@
           <div class="misc-box">Create Recipe</div>
           <div class="misc-box">Your Recipes</div>
       </div>
+    </div>
       <div class="socials">
           <div class="fbook"></div>
           <div class="insta"></div>
