--- a/public/pages/create/create.html
+++ b/public/pages/create/create.html
@@ -15,15 +15,20 @@
 <input type="text" placeholder="Ingredient #1">
 <input type="text" placeholder="Ingredient #2">
 
+<div class="input-holder">
 <input type="text" placeholder="Ingredient #3">
 <button class="add"><span>+</span></button>
+</div>
 
 
-<h3>Enter Instructions:</h3>
+<h3 class="enter">Enter Instructions:</h3>
 <input type="text" placeholder="Instruction #1">
 <input type="text" placeholder="Instruction #2">
+
+<div class="input-holder">
 <input type="text" placeholder="Instruction #3">
 <button class="add"><span>+</span></button>
+</div>
 
 <!-- ===CREATE RECIPE BUTTON=== -->
 
