--- a/public/pages/editrecipe/editrecipe.html
+++ b/public/pages/editrecipe/editrecipe.html
@@ -15,15 +15,21 @@
 <input type="text" placeholder="Ingredient #1">
 <input type="text" placeholder="Ingredient #2">
 
+
+<div class="input-holder">
 <input type="text" placeholder="Ingredient #3">
 <button class="add"><span>+</span></button>
+</div>
 
 
 <h3>Edit Instructions:</h3>
 <input type="text" placeholder="Instruction #1">
 <input type="text" placeholder="Instruction #2">
+
+<div class="input-holder">
 <input type="text" placeholder="Instruction #3">
 <button class="add"><span>+</span></button>
+</div>
 
 <!-- ===CREATE RECIPE BUTTON=== -->
 
