--- a/public/pages/fullrecipe/fullrecipe.html
+++ b/public/pages/fullrecipe/fullrecipe.html
@@ -1,6 +1,7 @@
 <div class="fullrecipe-content">
     <div class="fullrecipe-container">
         <div class="image-descript">
+            
 <div class="fullrecipe-image"></div>
 <div class="fullrecipe-description">
     <div class="descript">Description:</div>
@@ -37,4 +38,5 @@
         </div>
         <button class="edit">Edit Recipe</button>
     </div>
+    <div class="side-text"></div>
 </div>
