--- a/public/index.html
+++ b/public/index.html
@@ -23,8 +23,10 @@
           <a href="#your" class="your">Your Recipes</a>
        
           <!-- =====LOGIN BUTTON=== -->
-          
-          <button onclick="signIn()" class="login">Login</button>
+          <a href="#login">
+          <button class="login">Login</button>
+        </a>
+          <!-- <button onclick="signIn()" class="login">Login</button> -->
 
           <button onclick="signOut()" class="logout">Log out</button>
 
