--- a/public/pages/create/create.html
+++ b/public/pages/create/create.html
@@ -3,7 +3,7 @@
         <h1>Hey Michael, create your recipe!</h1>
 
         <div class="input-holder">
-        <input type="text" placeholder="Add Recipe Image" />
+        <input type="text" placeholder="Add Recipe Image">
         <button class="attach">Attach file</button>
     </div>
         <input type="text" placeholder="Recipe Name">
