--- a/public/pages/login/login.html
+++ b/public/pages/login/login.html
@@ -2,8 +2,9 @@
     <div class="login-create-container">
     <div class="login-box">
         <h1>Login Here!</h1>
-        <input type="text">
-        <input type="text">
+    <!-- <label for="email">Email Address</label> -->
+        <input type="email"  name="email" id="email" value="Email Address">
+        <input type="password" name="password" id="password" placeholder="Password">
         <button>Login</button>
     </div>
     <div class="create-box">
