account creation auth
account creation auth

--- a/public/pages/login/login.html
+++ b/public/pages/login/login.html
@@ -3,18 +3,18 @@
     <div class="login-box">
         <h1>Login Here!</h1>
     <!-- <label for="email">Email Address</label> -->
-        <input type="email"  name="email" id="email" value="Email Address">
-        <input type="password" name="password" id="password" placeholder="Password">
+        <input type="email"  name="email" id="loginE mail" placeholder="Email Address">
+        <input type="password" name="loginPassword" id="login-password" placeholder="Password">
         <button>Login</button>
     </div>
     <div class="create-box">
         <div class="create-account">don’t have an account?</div>
         <h1>Sign Up!</h1>
-        <input type="text">
-        <input type="text">
-        <input type="text">
-        <input type="text">
-        <button>Sign Up</button>
+        <input type="text" name="fName" id="fName" placeholder="First Name">
+        <input type="text" name="lName" id="lName" placeholder="Last Name">
+        <input type="email" name="email" id="createEmail" placeholder="Email Address">
+        <input type="password" name="createPassword" id="createPassword" placeholder="Password">
+        <button onclick="createAccount()">Sign Up</button>
     </div>
 </div>
 </div>
