--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
        
           <!-- =====LOGIN BUTTON=== -->
           <a href="#login">
-          <button class="login">Login</button>
+          <button class="loginbtn">Login</button>
         </a>
           <!-- <button onclick="signIn()" class="login">Login</button> -->
 
