toggle buttons and links
toggle buttons and links

--- a/public/index.html
+++ b/public/index.html
@@ -18,8 +18,8 @@
         </div>
         <div class="links">
           <a href="#home" class="active">Home</a>
-          <a href="#browse">Browse</a>
-          <a href="#create">Create Recipe</a>
+          <a href="#browse" >Browse</a>
+          <a href="#create" class="createbtn">Create Recipe</a>
           <a href="#your" class="your">Your Recipes</a>
        
           <!-- =====LOGIN BUTTON=== -->
@@ -28,7 +28,7 @@
         </a>
           <!-- <button onclick="signIn()" class="login">Login</button> -->
 
-          <button onclick="signOut()" class="logout">Log out</button>
+          <button onclick="signOut()" class="logoutbtn">Log out</button>
 
         
 
