Revert "login logout"
This reverts commit f56f52ff7bfd6e3200105984d5163ea16b002029.

--- a/public/index.html
+++ b/public/index.html
@@ -17,10 +17,10 @@
         <span class="bar"></span>
         </div>
         <div class="links">
-          <a href="#home" class="homebtn">Home</a>
-          <a href="#browse" class="browsebtn">Browse</a>
+          <a href="#home" class="active">Home</a>
+          <a href="#browse" >Browse</a>
           <a href="#create" class="createbtn">Create Recipe</a>
-          <a href="#yourbtn" class="your">Your Recipes</a>
+          <a href="#your" class="your">Your Recipes</a>
        
           <!-- =====LOGIN BUTTON=== -->
           <a href="#login">
