login logout buttons and links
login logout buttons and links

--- a/public/pages/your/your.html
+++ b/public/pages/your/your.html
@@ -1,7 +1,7 @@
 <div class="your-content">
     <div class="your-hero">
        <div class="your-container">
-           <h1>Hey Michael, here are your recipes!</h1>
+           <h1>Hey <span class="name">Michael</span>, here are your recipes!</h1>
            <div class="your-box">
                <div class="your-image pizza">
                    <a href="#fullrecipe">
