--- a/public/pages/create/create.html
+++ b/public/pages/create/create.html
@@ -1,6 +1,6 @@
 <div class="create-content">
     <div class="field-container">
-        <h1>Hey Michael, create your recipe!</h1>
+        <h1>Hey <span class="name">Michael</span>, create your recipe!</h1>
 
         <div class="input-holder">
         <input type="text" placeholder="Add Recipe Image">
