--- a/public/pages/create/create.html
+++ b/public/pages/create/create.html
@@ -1,6 +1,7 @@
 <div class="create-content">
     <div class="field-container">
-        <h1>Hey <span class="name"></span>, create your recipe!</h1>
+        <h1>Hey <span class="name"></span>
+            , create your recipe!</h1>
 
         <div class="input-holder">
         <input type="text" placeholder="Add Recipe Image">
