--- a/public/pages/create/create.html
+++ b/public/pages/create/create.html
@@ -18,7 +18,7 @@
 
 <div class="input-holder">
 <input type="text" placeholder="Ingredient #3">
-<button class="add"><span>+</span></button>
+<button class="add">+</button>
 </div>
 
 
@@ -28,7 +28,7 @@
 
 <div class="input-holder">
 <input type="text" placeholder="Instruction #3">
-<button class="add"><span>+</span></button>
+<button class="add">+</button>
 </div>
 
 <!-- ===CREATE RECIPE BUTTON=== -->
