--- a/public/pages/editrecipe/editrecipe.html
+++ b/public/pages/editrecipe/editrecipe.html
@@ -1,6 +1,6 @@
 <div class="editrecipe-content">
     <div class="field-container">
-        <h1>Hey Michael, edit your recipe!</h1>
+        <h1>Hey, edit your recipe!</h1>
 
         <div class="input-holder">
         <input type="text" placeholder="Edit Recipe Image" />
@@ -18,17 +18,17 @@
 
 <div class="input-holder">
 <input type="text" placeholder="Ingredient #3">
-<button class="add"><span>+</span></button>
+<button class="add">+</button>
 </div>
 
 
-<h3>Edit Instructions:</h3>
+<h3 class="instructions">Edit Instructions:</h3>
 <input type="text" placeholder="Instruction #1">
 <input type="text" placeholder="Instruction #2">
 
 <div class="input-holder">
 <input type="text" placeholder="Instruction #3">
-<button class="add"><span>+</span></button>
+<button class="add">+</button>
 </div>
 
 <!-- ===CREATE RECIPE BUTTON=== -->
