--- a/public/pages/your/your.html
+++ b/public/pages/your/your.html
@@ -2,6 +2,21 @@
     <div class="your-hero">
        <div class="your-container">
            <h1>Hey <span class="name"></span>, here are your recipes!</h1>
+
+           <!-- ====ADD A LIST INPUT -->
+           <div class="addList">
+            <input type="text" id="listName" placeholder="New Recipe:" >
+            <input 
+            type="submit"
+            name="submit"
+            onclick="addMainList()"
+            value="Add List"
+            id="button"
+            class="button"
+            >
+        </div>
+
+        <!-- ===RECIPES===== -->
            <div class="your-box">
                <div class="your-image pizza">
                    <a href="#fullrecipe">
@@ -27,6 +42,7 @@
                <button class="delete">Delete</button>
             </div>
            </div>
+           
        </div>
     </div>
 </div>
