--- a/public/pages/create/create.html
+++ b/public/pages/create/create.html
@@ -2,32 +2,33 @@
     <div class="field-container">
         <h1>Hey <span class="name"></span>
             , create your recipe!</h1>
+            <div class="recipe-name" id="recipe-name"></div>
 
         <div class="input-holder">
         <input type="text" placeholder="Add Recipe Image">
-        <button class="attach">Attach file</button>
+        <button class="attach" id="attach">Attach file</button>
     </div>
         <input type="text" placeholder="Recipe Name">
-        <input type="text" placeholder="Recipe Description">
-        <input type="text" placeholder="Recipe Total Time">
-        <input type="text" placeholder="Recipe Serving Size">
+        <input type="text" id="full-description" placeholder="Recipe Description">
+        <input type="text" id="recipe-time" placeholder="Recipe Total Time">
+        <input type="text" id="recipe-serve" placeholder="Recipe Serving Size">
 
 <h3>Enter Ingredients:</h3>
-<input type="text" placeholder="Ingredient #1">
-<input type="text" placeholder="Ingredient #2">
+<input type="text" id="ingredient" placeholder="Ingredient #1">
+<input type="text" id="ingredient" placeholder="Ingredient #2">
 
 <div class="input-holder">
-<input type="text" placeholder="Ingredient #3">
+<input type="text" id="ingredient" placeholder="Ingredient #3">
 <button class="add">+</button>
 </div>
 
 
 <h3 class="enter">Enter Instructions:</h3>
-<input type="text" placeholder="Instruction #1">
-<input type="text" placeholder="Instruction #2">
+<input type="text" id="instruction" placeholder="Instruction #1">
+<input type="text" id="instruction" placeholder="Instruction #2">
 
 <div class="input-holder">
-<input type="text" placeholder="Instruction #3">
+<input type="text" id="instruction" placeholder="Instruction #3">
 <button class="add">+</button>
 </div>
 
