--- a/public/pages/fullrecipe/fullrecipe.html
+++ b/public/pages/fullrecipe/fullrecipe.html
@@ -2,7 +2,7 @@
     <div class="fullrecipe-container">
         <div class="image-descript">
             
-<div class="fullrecipe-image"></div>
+<div class="fullrecipe-image" id="fullrecipe-image"></div>
 <div class="fullrecipe-description">
     <div class="descript">Description:</div>
     <div class="fullrecipe-text">
