--- a/public/pages/your/your.html
+++ b/public/pages/your/your.html
@@ -4,13 +4,13 @@
            <h1>Hey <span class="name"></span>, here are your recipes!</h1>
 
            <!-- ====ADD A LIST INPUT -->
-           <div class="addList">
-            <input type="text" id="listName" placeholder="New Recipe:" >
+           <div class="addRecipe">
+            <input type="text" id="recipeName" placeholder="New Recipe:" >
             <input 
             type="submit"
             name="submit"
-            onclick="addMainList()"
-            value="Add List"
+            onclick="addMainRecipe()"
+            value="Add a Recipe"
             id="button"
             class="button"
             >
