--- a/public/pages/create/create.html
+++ b/public/pages/create/create.html
@@ -34,8 +34,24 @@
 
 <!-- ===CREATE RECIPE BUTTON=== -->
 
-<button class="create-button">
+<div class="addRecipe">
+    <input type="text" id="recipeName" placeholder="New Recipe:" >
+    <input 
+    type="submit"
+    name="submit"
+    onclick="addMainRecipe()"
+    value="Create Recipe"
+    id="create-button"
+    class="button"
+    >
+</div>
+
+
+<!-- <button class="create-button">
     Create Recipe
-</button>
+</button> -->
     </div>
 </div>
+
+ <!-- ====ADD A LIST INPUT -->
+ 
