--- a/public/pages/fullrecipe/fullrecipe.html
+++ b/public/pages/fullrecipe/fullrecipe.html
@@ -13,6 +13,7 @@
     <div class="serve">Servings:</div>
     <div class="servings">4 servings</div>
 </div>
+</div>
         </div>
         <div class="ingredient-container">
             <div class="ingred-title">Ingredients:</div>
@@ -37,6 +38,31 @@
             <div class="instruction">5. Bake for 8 to 10 minutes or until the crust is crisp and the cheese melted and lightly browned.</div>
         </div>
         <button class="edit">Edit Recipe</button>
-    </div>
-    <div class="side-text"></div>
+    
+    <div class="side-text">supreme pizza</div>
 </div>
+
+
+<!-- JUST IN CASE
+
+<div class="ingredient"">
+    <div class="ingredient"> 2 tablespoons Last-Minute Pizza Sauce</div>
+    <div class="ingredient">10 slices pepperoni</div>
+    <div class="ingredient">1 cup cooked and crumbled Italian sausage</div>
+    <div class="ingredient">2 large mushrooms,</div>
+    <div class="ingredient">sliced 1/4 bell pepper, sliced</div>
+    <div class="ingredient"> 1 tablespoon sliced black olives </div>
+    <div class="ingredient">1 cup shredded mozzarella cheese</div> -->
+
+    <!-- INGREDIENTS -->
+
+    <!-- 1. Preheat the oven to 475°. Spray pizza pan with nonstick cooking or line a baking sheet with parchment paper. </div>
+
+            <div class="instruction">2. Flatten dough into a thin round and place on the pizza pan.
+
+                3. Spread pizza sauce over the dough.
+            </div>
+            <div class="instruction">4. Layer the toppings over the dough in the order listed .</div>
+            <div class="instruction">5. Bake for 8 to 10 minutes or until the crust is crisp and the cheese melted and lightly browned.</div>
+            </div>
+            -->
