--- a/public/pages/fullrecipe/fullrecipe.html
+++ b/public/pages/fullrecipe/fullrecipe.html
@@ -1,4 +1,4 @@
-<div class="fullrecipe-content">
+<!-- <div class="fullrecipe-content">
     <div class="fullrecipe-container">
         <div class="image-descript">
             
@@ -40,7 +40,7 @@
         <button class="edit">Edit Recipe</button>
     
     <div class="side-text">supreme pizza</div>
-</div>
+</div> -->
 
 
 <!-- JUST IN CASE
