--- a/public/pages/create/create.html
+++ b/public/pages/create/create.html
@@ -2,7 +2,7 @@
     <div class="field-container">
         <h1>Hey <span class="name"></span>
             , create your recipe!</h1>
-            <div class="recipe-name" id="recipe-name"></div>
+            
 
         <div class="input-holder">
         <input type="text" placeholder="Add Recipe Image">
@@ -35,7 +35,8 @@
 <!-- ===CREATE RECIPE BUTTON=== -->
 
 <div class="addRecipe">
-    <input type="text" id="recipeName" placeholder="New Recipe:" >
+   
+    <input type="text" id="recipeName" class="recipeName" placeholder="New Recipe"/>
     <input 
     type="submit"
     name="submit"
@@ -43,7 +44,7 @@
     value="Create Recipe"
     id="create-button"
     class="button"
-    >
+    />
 </div>
 
 
