--- a/public/pages/browse/browse.html
+++ b/public/pages/browse/browse.html
@@ -1,78 +1,82 @@
-<div class="browse-content">
-    <div class="browse-hero">
-        <div class="recipe-container">
-        <h1>Recipes: Try some today!</h1>
-        <!-- RECIPE BOX ONE -->
-        <div class="recipe-box">
-            <div class="recipe-image pizza"></div>
-            <div class="recipe-description">
-                <div class="recipe-title">Supreme Pizza</div>
-                <div class="recipe-text">
-                    Make pizza night super duper out of this world with homemade pizza. This recipe is supreme with vegetables and two types of meat. Yum!
-                </div>
-                <div class="recipe-stats">
-                    <div class="icon timer"></div>
-                    <div class="time">1h 24min</div>
-                </div>
-                <div class="recipe-stats">
-                    <div class="icon meal"></div>
-                    <div class="servings">4 servings</div>
-                </div>
-            </div>
-        </div>
+       <div class="browse-content">
+   <div class="browse-hero">
+       <div class="recipe-container">
+       <h1>Recipes: Try some today!</h1>
+       <!-- RECIPE BOX ONE -->
+       <div class="recipe-box">
+           <div class="recipe-image pizza"></div>
+           <div class="recipe-description">
+               <div class="recipe-title">Supreme Pizza</div>
+               <div class="recipe-text">
+                   Make pizza night super duper out of this world with homemade pizza. This recipe is supreme with vegetables and two types of meat. Yum!
+               </div>
+               <div class="recipe-stats">
+                   <div class="icon timer"></div>
+                   <div class="time">1h 24min</div>
+               </div>
+               <div class="recipe-stats">
+                   <div class="icon meal"></div>
+                   <div class="servings">4 servings</div>
+               </div>
+           </div>
+       </div>
 
-        <!-- ====RECIPE BOX TWO=== -->
-        <div class="recipe-box">
-            <div class="recipe-image burger"></div>
-            <div class="recipe-description">
-                <div class="recipe-title">Classic Burger</div>
-                <div class="recipe-text">Sink your teeth into a delicious restaurant-style, hamburger recipe made from lean beef. Skip the prepackaged patties and take the extra time to craft up your own, and that little extra effort will be worth it.</div>
-                <div class="recipe-stats">
-                    <div class="icon timer"></div>
-                    <div class="time">30 min</div>
-                </div>
-                <div class="recipe-stats">
-                    <div class="icon meal"></div>
-                    <div class="servings">4 servings</div>
-                </div>
-            </div>
-        </div>
+       <!-- ====RECIPE BOX TWO=== -->
+       <div class="recipe-box">
+           <div class="recipe-image burger"></div>
+           <div class="recipe-description">
+               <div class="recipe-title">Classic Burger</div>
+               <div class="recipe-text">Sink your teeth into a delicious restaurant-style, hamburger recipe made from lean beef. Skip the prepackaged patties and take the extra time to craft up your own, and that little extra effort will be worth it.</div>
+               <div class="recipe-stats">
+                   <div class="icon timer"></div>
+                   <div class="time">30 min</div>
+               </div>
+               <div class="recipe-stats">
+                   <div class="icon meal"></div>
+                   <div class="servings">4 servings</div>
+               </div>
+           </div>
+       </div>
 
-        <!-- ====RECIPE BOX THREE=== -->
+       <!-- ====RECIPE BOX THREE=== -->
 
-        <div class="recipe-box">
-            <div class="recipe-image pilaf"></div>
-            <div class="recipe-description">
-                <div class="recipe-title">Chicken Biryani</div>
-                <div class="recipe-text">Chicken Biryani is a bold and flavorful Indian dish with crazy tender bites of chicken with bell peppers in a deliciously spiced and fragrant rice.</div>
-                <div class="recipe-stats">
-                    <div class="icon timer"></div>
-                    <div class="time">1h 15min</div>
-                </div>
-                <div class="recipe-stats">
-                    <div class="icon meal"></div>
-                    <div class="servings">6 servings</div>
-                </div>
-            </div>
-        </div>
+       <div class="recipe-box">
+           <div class="recipe-image pilaf">${RECIPES</div>
+           <div class="recipe-description">
+               <div class="recipe-title">Chicken Biryani</div>
+               <div class="recipe-text">Chicken Biryani is a bold and flavorful Indian dish with crazy tender bites of chicken with bell peppers in a deliciously spiced and fragrant rice.</div>
+               <div class="recipe-stats">
+                   <div class="icon timer"></div>
+                   <div class="time">1h 15min</div>
+               </div>
+               <div class="recipe-stats">
+                   <div class="icon meal"></div>
+                   <div class="servings">6 servings</div>
+               </div>
+           </div>
+       </div>
 
-        <!-- ====RECIPE BOX FOUR=== -->
-        <div class="recipe-box">
-            <div class="recipe-image chowmein"></div>
-            <div class="recipe-description">
-                <div class="recipe-title">Ch. Chow Mein</div>
-                <div class="recipe-text">A great Chow Mein comes down to the sauce - it takes more than just soy sauce and sugar! Jam packed with a surprising amount of hidden vegetables, customize this Chicken Chow Mein recipe using your protein of choice!</div>
-                <div class="recipe-stats">
-                    <div class="icon timer"></div>
-                    <div class="time">20 min</div>
-                </div>
-                <div class="recipe-stats">
-                    <div class="icon meal"></div>
-                    <div class="servings">4 servings</div>
-                </div>
-            </div>
-        </div>
+       <!-- ====RECIPE BOX FOUR=== -->
+       <div class="recipe-box">
+           <div class="recipe-image chowmein"></div>
+           <div class="recipe-description">
+               <div class="recipe-title">Ch. Chow Mein</div>
+               <div class="recipe-text">A great Chow Mein comes down to the sauce - it takes more than just soy sauce and sugar! Jam packed with a surprising amount of hidden vegetables, customize this Chicken Chow Mein recipe using your protein of choice!</div>
+               <div class="recipe-stats">
+                   <div class="icon timer"></div>
+                   <div class="time">20 min</div>
+               </div>
+               <div class="recipe-stats">
+                   <div class="icon meal"></div>
+                   <div class="servings">4 servings</div>
+               </div>
+           </div>
+       </div>
 
-    </div>
-        </div> 
-    </div>
+   </div>
+       </div> 
+   </div>
+       `)
+    });
+   
+ }
