building recipe data
building recipe data

--- a/public/pages/browse/browse.html
+++ b/public/pages/browse/browse.html
@@ -3,7 +3,7 @@
        <div class="recipe-container">
        <h1>Recipes: Try some today!</h1>
        <!-- RECIPE BOX ONE -->
-       <div class="recipe-box">
+       <div class="recipe-box" onclick="initRecipeListeners()">
            <div class="recipe-image pizza"></div>
            <div class="recipe-description">
                <div class="recipe-title">Supreme Pizza</div>
