Revert "mess up"
This reverts commit c7069bdf4ae02da1598f79f433f45ca68623667f.

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
           <a href="#home" class="active">Home</a>
           <a href="#browse" >Browse</a>
           <a href="#create" class="createbtn">Create Recipe</a>
-          <a href="#your" class="your" onclick="loadData()">Your Recipes</a>
+          <a href="#your" class="your">Your Recipes</a>
        
           <!-- =====LOGIN BUTTON=== -->
           <a href="#login">
