trying to get ingredient list to work
trying to get ingredient list to work

--- a/public/pages/create/create.html
+++ b/public/pages/create/create.html
@@ -21,7 +21,7 @@
 
 <div class="input-holder">
 <input type="text" id="ingredient" placeholder="Ingredient #3">
-<button class="add">+</button>
+<button class="add" id="add-ingredient" onclick="addIngredient()">+</button>
 </div>
 
 
