clearing info after logout
clearing info after logout

--- a/public/pages/fullrecipe/fullrecipe.html
+++ b/public/pages/fullrecipe/fullrecipe.html
@@ -1,8 +1,8 @@
-<!-- <div class="fullrecipe-content">
+ <div class="fullrecipe-content">
     <div class="fullrecipe-container">
         <div class="image-descript">
             <div class="side-text">supreme pizza</div>
-<div class="fullrecipe-image" id="fullrecipe-image"></div>
+<div class="fullrecipe-image"></div>
 <div class="fullrecipe-description">
     <div class="descript">Description:</div>
     <div class="fullrecipe-text">
@@ -14,8 +14,8 @@
     <div class="servings">4 servings</div>
 </div>
 </div>
-</div> -->
-<!-- ${RECIPES[recipeIndex].recipeIngredients} -->
+</div>
+<!-- ${RECIPES[recipeIndex].recipeIngredients} --> 
 
 <!-- =====EXTRA===== -->
  
@@ -38,13 +38,13 @@
 </div>
         </div>
 
-        <div class="ingredient-container" id="ingredient-container>
+         <div class="ingredient-container" id="ingredient-container>
         <div class="title-button-holder">
             <div class="ingred-title">Ingredients:</div>
             <button class="load-ingred" onclick="loadIngredients()">Load Ingredients</button> 
             </div>
             <div class="ingredient" id="ingredient">${RECIPES.recipeIngredients}</div>
-        </div>
+        </div> -->
 
         <div class="instructions-container">
             <div class="instruct-title">Instructions:</div>
@@ -55,9 +55,9 @@
         <button class="close">CLOSE</button>
     <div class="side-text"></div>
     </div>
-</div>
+</div> 
 
-    -->
+
 
     <!-- CHEKING CODE -->
 
