--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,9 @@
       <div class="logo"></div>
       <div class="nav-holder">
         <div class="bars">
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
+        <div class="bar"></div>
+        <div class="bar"></div>
+        <div class="bar"></div>
         </div>
         <div class="links">
           <a href="#home" class="active">Home</a>
