--- a/public/pages/browse/browse.html
+++ b/public/pages/browse/browse.html
@@ -41,7 +41,7 @@
        <!-- ====RECIPE BOX THREE=== -->
 
        <div class="recipe-box">
-           <div class="recipe-image pilaf">${RECIPES</div>
+           <div class="recipe-image pilaf"></div>
            <div class="recipe-description">
                <div class="recipe-title">Chicken Biryani</div>
                <div class="recipe-text">Chicken Biryani is a bold and flavorful Indian dish with crazy tender bites of chicken with bell peppers in a deliciously spiced and fragrant rice.</div>
@@ -72,11 +72,6 @@
                </div>
            </div>
        </div>
-
    </div>
        </div> 
    </div>
-       `)
-    });
-   
- }
