--- a/public/pages/create/create.html
+++ b/public/pages/create/create.html
@@ -1,7 +1,6 @@
 <div class="create-content">
     <div class="field-container">
-        <h1>Hey, <span class="name" id="first-name">Michael</span>
-            ,create your recipe!</h1>
+        <h1>Hey, create your recipe!</h1>
             
             
         <div class="input-holder">
